--- a/styles/base/base-style.scss
+++ b/styles/base/base-style.scss
@@ -27,4 +27,6 @@ body{
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
     overflow-x: hidden;
+    max-width: 1920px;
+    margin: 0 auto;
 }
