--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,4 +1,5 @@
-@import "../../base/base-style.scss";
+// @import "../../base/base-style.scss";
+@import '../../global.scss';
 @import "../../sass/mixins";
 @import "./who-we-are";
 @import "./our-impact";
