--- a/styles/pages/social-business/social-business.scss
+++ b/styles/pages/social-business/social-business.scss
@@ -1,5 +1,5 @@
-@import '../../base/base-style.scss';
-
+// @import '../../base/base-style.scss';
+@import '../../global.scss';
 @import '../../components/button';
 @import '../../components/header';
 @import '../../components/footer';
