--- a/styles/global.css
+++ b/styles/global.css
@@ -132,9 +132,28 @@ p {
   font-family: 'Montserrat', sans-serif;
 }
 
+html {
+  font-size: 62.5%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+@media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 60em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   overflow-x: hidden;
+  max-width: 1920px;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=global.css.map */
