scripts file shifted to frontend folder

--- a/styles/pages/community/community.css
+++ b/styles/pages/community/community.css
@@ -126,6 +126,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -274,6 +275,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
