footer, navigation menu

--- a/frontend/styles/pages/contact/contact.scss
+++ b/frontend/styles/pages/contact/contact.scss
@@ -2,6 +2,8 @@
 @import "./joinus";
 @import "./contact-person";
 @import "./form";
+@import '../../components/header';
+@import '../../components/footer';
 
 // community banner
 .contact-banner {
