--- a/frontend/styles/pages/community/community.scss
+++ b/frontend/styles/pages/community/community.scss
@@ -1,7 +1,7 @@
 @import "../../base/base-style.scss";
 
 @import "../../components/header";
-
+@import "../../components/footer";
 @import "./resources-slider";
 @import "./blog-slider";
 
