set link in the about to member of a team and update on press page

--- a/frontend/styles/pages/about/about.css
+++ b/frontend/styles/pages/about/about.css
@@ -1670,7 +1670,12 @@ p {
       justify-self: center;
 }
 
-.about__team--container .member .img-container {
+.about__team--container .member__link {
+  text-decoration: none;
+  color: #222222;
+}
+
+.about__team--container .member__img-container {
   margin-bottom: 1rem;
 }
 
