--- a/frontend/styles/pages/press/press.scss
+++ b/frontend/styles/pages/press/press.scss
@@ -1,4 +1,8 @@
-@import "../../global.scss";
+@import '../../base/base-style.scss';
+
+@import '../../components/header';
+@import '../../components/footer';
+
 @import './image-gallery';
 
 .press-container{
