footer sass link added in team member page

--- a/frontend/styles/pages/team-member/team-member.scss
+++ b/frontend/styles/pages/team-member/team-member.scss
@@ -2,6 +2,7 @@
 
 @import '../../components/button';
 @import '../../components/header';
+@import '../../components/footer';
 
 @import '../../sass/mixins';
 @import '../../sass/typography';
