--- a/frontend/styles/pages/about/about.scss
+++ b/frontend/styles/pages/about/about.scss
@@ -201,18 +201,21 @@
 
         &--heading{
             text-align: center;
-            margin-bottom: 7rem;
+            margin-bottom: 1rem;
+            color: $text-dark;
+            font-weight: 600;
         }
 
         &--container{
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
             grid-gap: 2rem;
+            margin: 4% auto 0 auto;
 
             @include response(big-desktop){
                 grid-template-columns: repeat(5, minmax(18rem, 1fr));
                 width: 70%;
-                margin: 0 auto;
+                margin: 4% auto 0 auto;
             }
             @include response(tab-port){
                 grid-template-columns: repeat(3, minmax(18rem, 1fr));
@@ -241,7 +244,7 @@
         }
 
         &--box{
-            margin-top: 4rem;
+            margin-top: 8rem;
             display: flex;
             justify-content: center;
         }
