--- a/frontend/styles/pages/contact/_form.scss
+++ b/frontend/styles/pages/contact/_form.scss
@@ -11,9 +11,42 @@
         @media screen and (max-width: 600px) {
             margin-left: 0;
         }
+        .gcl-success{
+            width: 500px;
+            padding: 10px;
+            border: 2px solid #00cc99;
+            background-color: #e6fff9;
+            border-radius: 10px;
+            margin-top: 2.5%;
+            text-align: center;
+            p{
+                color: #00cc99;
+                font-size: 16px;
+            }
+            @media screen and (max-width: 600px) {
+                width: 100%;
+            }
+        }
+        .gcl-error{
+            width: 500px;
+            padding: 10px;
+            border: 2px solid #ff3333;
+            background-color: #ffe6e6;
+            border-radius: 10px;
+            margin-top: 2.5%;
+            text-align: center;
+            p{
+                color: #ff3333;
+                font-size: 16px;
+            }
+            @media screen and (max-width: 600px) {
+                width: 100%;
+            }
+        }
         h2{
             color: $text-dark;
             font-weight: 500;
+            font-size: calc(12px + 2vw);
         }
         .input-box{
             margin-top: 2.5%;
@@ -21,6 +54,7 @@
                 display: block;
                 color: $text-dark;
                 margin-bottom: 0.5%;
+                font-size: 16px;
             }
             input{
                 display: block;
