--- a/frontend/styles/pages/social-business/social-business.css
+++ b/frontend/styles/pages/social-business/social-business.css
@@ -71,12 +71,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -160,6 +154,10 @@ body {
   margin: 0 auto;
 }
 
+a, button {
+  font-family: 'Montserrat', sans-serif;
+}
+
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -227,12 +225,6 @@ h6 {
 
 p {
   color: #222222;
-}
-
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
 }
 
 .mb-1 {
@@ -319,11 +311,16 @@ body {
   margin: 0 auto;
 }
 
+a, button {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .btn {
   font-size: 2rem;
   padding: 1rem 2rem;
-  border-radius: .5rem;
+  border-radius: 1rem;
   cursor: pointer;
+  font-weight: 500;
 }
 
 @media (max-width: 35.5em) {
@@ -461,12 +458,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -551,6 +542,10 @@ body {
   margin: 0 auto;
 }
 
+a, button {
+  font-family: 'Montserrat', sans-serif;
+}
+
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -618,12 +613,6 @@ h6 {
 
 p {
   color: #222222;
-}
-
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
 }
 
 .mb-1 {
@@ -958,12 +947,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -1046,6 +1029,10 @@ body {
   overflow-x: hidden;
   max-width: 1920px;
   margin: 0 auto;
+}
+
+a, button {
+  font-family: 'Montserrat', sans-serif;
 }
 
 .footer-container {
@@ -1290,12 +1277,6 @@ h6 {
 
 p {
   color: #222222;
-}
-
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
 }
 
 .mb-1 {
@@ -1630,7 +1611,7 @@ $breakpoint arguments choice:
 
 .social-business__video {
   height: 70rem;
-  padding: 2rem 0;
+  padding: 0;
 }
 
 @media (max-width: 40em) {
@@ -1681,6 +1662,11 @@ $breakpoint arguments choice:
 
 .social-business__goal--content {
   grid-column: col-start 1 / col-end 1;
+}
+
+.social-business__goal--content h3 {
+  font-size: 3.6rem;
+  color: #222222;
 }
 
 @media (max-width: 40em) {
