--- a/frontend/styles/components/_button.scss
+++ b/frontend/styles/components/_button.scss
@@ -4,9 +4,9 @@
 .btn{
     font-size: 2rem;
     padding: 1rem 2rem;
-    border-radius: .5rem;
+    border-radius: 1rem;
     cursor: pointer;
-
+    font-weight: 500;
     @include response(M-phone){
         font-size: 1.6rem;
         padding: .8rem 1.6rem;
