--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -68,12 +68,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -155,5 +149,9 @@ body {
   overflow-x: hidden;
   max-width: 1920px;
   margin: 0 auto;
+}
+
+a, button {
+  font-family: 'Montserrat', sans-serif;
 }
 /*# sourceMappingURL=global.css.map */
