--- a/frontend/styles/pages/about/about.css
+++ b/frontend/styles/pages/about/about.css
@@ -71,12 +71,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -159,6 +153,10 @@ body {
   overflow-x: hidden;
   max-width: 1920px;
   margin: 0 auto;
+}
+
+a, button {
+  font-family: 'Montserrat', sans-serif;
 }
 
 /*
@@ -230,12 +228,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -320,11 +312,16 @@ body {
   margin: 0 auto;
 }
 
+a, button {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .btn {
   font-size: 2rem;
   padding: 1rem 2rem;
-  border-radius: .5rem;
+  border-radius: 1rem;
   cursor: pointer;
+  font-weight: 500;
 }
 
 @media (max-width: 35.5em) {
@@ -462,12 +459,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -552,6 +543,10 @@ body {
   margin: 0 auto;
 }
 
+a, button {
+  font-family: 'Montserrat', sans-serif;
+}
+
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -619,12 +614,6 @@ h6 {
 
 p {
   color: #222222;
-}
-
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
 }
 
 .mb-1 {
@@ -959,12 +948,6 @@ p {
   color: #222222;
 }
 
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
-}
-
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -1047,6 +1030,10 @@ body {
   overflow-x: hidden;
   max-width: 1920px;
   margin: 0 auto;
+}
+
+a, button {
+  font-family: 'Montserrat', sans-serif;
 }
 
 .footer-container {
@@ -1309,12 +1296,6 @@ h6 {
 
 p {
   color: #222222;
-}
-
-@media screen and (max-width: 600px) {
-  p {
-    font-size: 16px;
-  }
 }
 
 .mb-1 {
@@ -1628,7 +1609,9 @@ p {
 
 .about__team--heading {
   text-align: center;
-  margin-bottom: 7rem;
+  margin-bottom: 1rem;
+  color: #222222;
+  font-weight: 600;
 }
 
 .about__team--container {
@@ -1637,6 +1620,7 @@ p {
   -ms-grid-columns: (minmax(18rem, 1fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   grid-gap: 2rem;
+  margin: 4% auto 0 auto;
 }
 
 @media (min-width: 112.5em) {
@@ -1644,7 +1628,7 @@ p {
     -ms-grid-columns: (minmax(18rem, 1fr))[5];
         grid-template-columns: repeat(5, minmax(18rem, 1fr));
     width: 70%;
-    margin: 0 auto;
+    margin: 4% auto 0 auto;
   }
 }
 
@@ -1684,7 +1668,7 @@ p {
 }
 
 .about__team--box {
-  margin-top: 4rem;
+  margin-top: 8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
