--- a/frontend/styles/pages/contact/_contact-person.scss
+++ b/frontend/styles/pages/contact/_contact-person.scss
@@ -40,7 +40,8 @@
         }
         a{
             color: $text-dark;
-            margin-top: 2%;
+            margin-top: 2.5%;
+            font-size: 16px;
         }
     }
 }
