--- a/frontend/styles/pages/home/_who-we-are.scss
+++ b/frontend/styles/pages/home/_who-we-are.scss
@@ -60,7 +60,7 @@
             margin: 0 auto;
             width: 50%;
             text-align: center;
-            padding: 5% 0;
+            padding: 5% 0 7.5% 0;
             position: relative;
             h2{
                 font-size: calc(10px + 2vw);
@@ -100,6 +100,12 @@
                     text-align: center;
                     display: inline-block;
                     height: 100%;
+                    path{
+                        stroke-width: 2;
+                        @media screen and (min-width: 1441px) {
+                            stroke-width: 1;
+                        } 
+                    }
                 }
             }  
             .inspire-grid{
