--- a/frontend/styles/pages/social-business/social-business.scss
+++ b/frontend/styles/pages/social-business/social-business.scss
@@ -214,7 +214,7 @@
 
     &__video{
         height: 70rem;
-        padding: 2rem 0;
+        padding: 0;
 
         @include response(phone){
             height: 45rem;
@@ -247,6 +247,10 @@
             }
         }
         &--content{
+            h3{
+                font-size: 3.6rem;
+                color: $text-dark;
+            }
             grid-column: col-start 1 / col-end 1;
 
             @include response(phone){
