--- a/frontend/styles/pages/about/about.scss
+++ b/frontend/styles/pages/about/about.scss
@@ -208,7 +208,7 @@
 
         &--container{
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+            grid-template-columns: repeat(5, minmax(18rem, 1fr));
             grid-gap: 2rem;
             margin: 4% auto 0 auto;
 
