--- a/frontend/styles/pages/about/about.css
+++ b/frontend/styles/pages/about/about.css
@@ -1688,10 +1688,29 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 85%;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 1340px) {
+  .about__family {
+    width: 75%;
+  }
+}
+
+@media screen and (min-width: 1441px) {
+  .about__family {
+    width: 55%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about__family {
+    width: 100%;
+  }
 }
 
 .about__family--logo-container {
-  width: 80%;
   padding: 8rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1704,10 +1723,12 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 3em;
+  gap: 5em;
 }
 
 .about__family--logo-container .logo {
-  height: 6rem;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 /*# sourceMappingURL=about.css.map */
