--- a/frontend/styles/pages/about/about.scss
+++ b/frontend/styles/pages/about/about.scss
@@ -255,19 +255,29 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        width: 85%;
+        @media screen and (min-width: 1340px) {
+            width: 75%;
+        }
+        @media screen and (min-width: 1441px) {
+            width: 55%;
+        }
+        @media screen and (max-width: 600px) {
+            width: 100%;
+        }
+        margin: 0 auto;
         &--logo-container{
-            width: 80%;
             padding: 8rem 0;
-
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-            gap: 3em;
+            gap: 5em;
 
             .logo{
-                height: 6rem;
+                // height: 100%;
+                width: 100%;
+                object-fit: contain;
             }
         }
     }
