--- a/frontend/styles/pages/community/_blog-slider.scss
+++ b/frontend/styles/pages/community/_blog-slider.scss
@@ -77,6 +77,8 @@
                 }
                 p{
                     padding: 2.5% 0;
+                    font-size: 16px;
+                    color: $text-dark;
                 }
             }
             .slider-data-footer{
