--- a/frontend/styles/pages/community/community.css
+++ b/frontend/styles/pages/community/community.css
@@ -1535,6 +1535,8 @@ a, button {
 
 .blog-slider .resources-slider-body .slider-data .slider-data-body p {
   padding: 2.5% 0;
+  font-size: 16px;
+  color: #222222;
 }
 
 .blog-slider .resources-slider-body .slider-data .slider-data-footer {
